# Concept-Master

./: .env.example  .gitignore  CLAUDE.md  README.md  agents.md  package-lock.json  pyproject.toml  requirements.txt  schema.sql  seed.sql
.cursor/rules/: app-shell-layout.mdc
backend/: .gitignore  content_loader.py  content_loader_articles.py  content_writer.py  content_writer_articles.py  database.py  main.py  models.py  requirements.txt  schema.sql  seed.sql  setup_db.py  symbols.py  sync_articles.py  sync_content.py
backend/routers/: articles.py  categories.py  review.py  stats.py  tags.py  terms.py
content/: categories.yml
content/articles/: choosing-the-right-data-structure.md  database-normalization-in-depth.md  designing-react-uis.md  learning-well-styled-react-apps.md  running-split-apps.md  understanding-big-o-notation.md  using-agentic-ai-to-build-software.md  working-effectively-with-ai-coding-agents.md
content/terms/: abstract-class.md  abstract-data-type.md  acid.md  adapter-pattern.md  ai-coding-agent.md  (+172 more)
docs/: concept-visuals.md  running-split-apps.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
scripts/: concept-master.desktop  migrate_seed_to_content.py  new_concept_visual.py  start-preview.bat  start.bat  start.sh
tests/: conftest.py  test_article_models.py  test_categories.py  test_content_loader.py  test_content_loader_articles.py  test_content_writer.py  test_content_writer_articles.py  test_stats.py  test_sync_articles_helpers.py  test_sync_content.py  test_tags.py  test_terms.py  test_terms_writeback.py
(+32 files in other folders)
