[project]
name = "concept-master"
version = "0.1.0"
description = "A local-first programming glossary web app"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "aiomysql>=0.2.0",
    "pydantic>=2.6.0",
    "python-slugify>=8.0.0",
    "python-dotenv>=1.0.0",
    "sqlparse>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
